# feran-game-engine

./: .gitignore  CMakeLists.txt  Game_PF.sln  feranGame.txt
Assets/Shaders/: DefaultVertexShader.glsl
Feran/: CMakeLists.txt  Events.cpp  Events.h  Feran.vcxproj  Feran.vcxproj.filters  FeranApp.cpp  FeranApp.h  GameWindow.cpp  GameWindow.h  Keys.h  MyGame.h  Picture.cpp  Picture.h  PictureImplementation.h  Renderer.cpp  Renderer.h  RendererImplementation.h  Shader.cpp  Shader.h  ShaderImplementation.h  Unit.cpp  Unit.h  Utilities.h  WindowImplementation.h  pch.h  placeholder.cpp
Feran/GLFWCode/: GLFWImplementation.cpp  GLFWImplementation.h  OpenGLPicture.cpp  OpenGLPicture.h  OpenGLRenderer.cpp  OpenGLRenderer.h  OpenGLShader.cpp  OpenGLShader.h
Feran/include/: Feran.h
Game_PF/: CMakeLists.txt  Game_PF.vcxproj  Game_PF.vcxproj.filters  MyGame.h  main.cpp
glad/: glad.vcxproj
glad/include/glad/: glad.h
glad/src/: glad.c
glfw_proj/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  GLFW.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  cmake_uninstall.cmake
glfw_proj/src/: cmake_install.cmake  glfw.vcxproj  glfw.vcxproj.filters  update_mappings.vcxproj  update_mappings.vcxproj.filters
glfw_proj/src/Debug/: glfw3dll.exp  glfw3dll.lib
glfw_proj/src/glfw.dir/Debug/: glfw3.dll.recipe  glfw3.ilk
glfw_proj/src/glfw.dir/Debug/glfw.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  glfw.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  link.write.2u.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog
stbi/: stbi.vcxproj
